objects/InsurancePolicyCoverage.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins_fsc__AttributesSelectedValues__c</fullName>
        <label>Attributes Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__FeeAmount__c</fullName>
        <description>DEPRECATED. Please use StandardFeeAmount.</description>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InsurancePolicyParticipantId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insured Party</label>
        <referenceTo>InsurancePolicyParticipant</referenceTo>
        <relationshipLabel>Insurance Policy Coverage Participants</relationshipLabel>
        <relationshipName>InsurancePolicyCoverageParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Insurance Policy Coverage Products</relationshipLabel>
        <relationshipName>InsurancePolicyCoverageProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ProductChildItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Child Item</label>
        <referenceTo>vlocity_ins__ProductChildItem__c</referenceTo>
        <relationshipLabel>Insurance Policy Coverage Product Child Items</relationshipLabel>
        <relationshipName>InsurancePolicyCoverageProductChildItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ProductCode__c</fullName>
        <formula>vlocity_ins_fsc__Product2Id__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ProratedFeeAmount__c</fullName>
        <description>DEPRECATED. Please use TermFeeAmount.</description>
        <label>Prorated Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ProratedPremiumAmount__c</fullName>
        <description>DEPRECATED. Please use TermPremiumAmount.</description>
        <label>Prorated Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ProratedTaxAmount__c</fullName>
        <description>DEPRECATED. Please use TermTaxAmount.</description>
        <label>Prorated Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TaxAmount__c</fullName>
        <description>DEPRECATED. Please use StandardTaxAmount.</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalAmount__c</fullName>
        <description>DEPRECATED. Please use TotalStandardAmount.</description>
        <formula>vlocity_ins_fsc__TaxAmount__c + vlocity_ins_fsc__FeeAmount__c + PremiumAmount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalProratedAmount__c</fullName>
        <description>DEPRECATED. Please use PremiumAmount. If PremiumAmount is in use, please move the current usage of PremiumAmount to StandardPremiumAmount.</description>
        <formula>vlocity_ins_fsc__ProratedTaxAmount__c + vlocity_ins_fsc__ProratedFeeAmount__c + vlocity_ins_fsc__ProratedPremiumAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prorated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalTaxFeeAmount__c</fullName>
        <formula>vlocity_ins_fsc__TaxAmount__c + vlocity_ins_fsc__FeeAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tax and Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>All_InsurancePolicyCoverages</fullName>
        <filterScope>Everything</filterScope>
        <label>All Insurance Policy Coverages</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>